# bashrc

./: .bash_aliases  .bash_lib  .bashrc  AI_CONTEXT_PYTHON_LEVELS.md  README.md  auto.sh  cp_from_home.sh  pydev_lux.md  pyproject.toml
scripts/: .bash_aliases  .bash_lib  .bashrc  auto.sh
src/bashrc/: __init__.py
