[project]
name = "bashrc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Frank Bloecher", email = "frankbloecher@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
